Feature/changes (#19)
* Code updated

* Category validation added

* Code updated

* Category and product flow updated